--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,4 @@
 PORT = 3000
 MONGO_URI = mongodb+srv://Andy:Gftu2qMojrO4LKDR@cluster0.mcsix.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID 325712332527-hchebc57efmj6t3beqi01cf3sfgl9bht.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET 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
